fix alignment

--- a/project/css/app/app.css
+++ b/project/css/app/app.css
@@ -3,6 +3,9 @@
   transition: opacity 0.15s ease;
   width: 100%;
   padding: 0 80px 85px 80px;
+  display: flex;  
+  flex-direction: column;
+  align-items: center;
 }
 
 #app.out {
