--- a/project/css/datasetsPage/sectionDatasetsCards.css
+++ b/project/css/datasetsPage/sectionDatasetsCards.css
@@ -1,5 +1,5 @@
 .section-datasets-cards {
-  width: 100%;
+  width: min(100%, 1200px);
   display: flex;
   flex-direction: column;
 }
